fixed the slipping of equations from main into body by changing width to max-width, customized scrollbar of the equations

--- a/static/style.css
+++ b/static/style.css
@@ -29,11 +29,22 @@ p{
 mjx-container[display="true"] {
     font-size: 110% !important;
     text-align: left !important;
-    width: 100% !important;
     margin-left: 6% !important;
     padding: 20px;
+    max-width: 100% !important;
+    display: block;
+    scrollbar-width: thin;
+    scrollbar-color: darkgray transparent;
 }
 
+mjx-container[display="true"]::-webkit-scrollbar {
+    height: 8px;
+}
+
+mjx-container[display="true"]::-webkit-scrollbar-thumb {
+    background-color: darkgray;
+    border-radius: 4px;
+}
 
 mjx-mtable {
     text-align: left !important;
